cli/tests/snapshots/help__btrfs_filesystem_resize.snap
---
source: cli/tests/help.rs
expression: text
---
Resize a mounted btrfs filesystem

Usage: resize [OPTIONS] <SIZE> <PATH>

Arguments:
  <SIZE>
          New size for the filesystem, e.g. "1G", "+512M", "-1G", "max",
          "cancel", or "devid:ID:SIZE" to target a specific device

  <PATH>
          

Options:
      --enqueue
          Wait if there is another exclusive operation running, otherwise error

      --offline
          Resize a filesystem stored in a file image (unmounted)

  -h, --help
          Print help
