cli/tests/snapshots/help__btrfs_filesystem_show.snap
---
source: cli/tests/help.rs
expression: text
---
Show information about one or more mounted or unmounted filesystems

Usage: show [OPTIONS] [FILTER]

Arguments:
  [FILTER]
          Path, UUID, device or label to show (shows all if omitted)

Options:
  -d, --all-devices
          Search all devices, including unmounted ones

  -m, --mounted
          Search only mounted filesystems

  -h, --help
          Print help
