cli/tests/snapshots/help__btrfs_filesystem_sync.snap
---
source: cli/tests/help.rs
expression: text
---
Force a sync on a mounted filesystem

Usage: sync <PATH>

Arguments:
  <PATH>
          

Options:
  -h, --help
          Print help
