cli/tests/snapshots/help__btrfs_filesystem_usage.snap
---
source: cli/tests/help.rs
expression: text
---
Show detailed information about internal filesystem usage

Usage: usage [OPTIONS] <PATHS>...

Arguments:
  <PATHS>...
          One or more mount points to show usage for

Options:
      --raw
          Show raw numbers in bytes

      --human-readable
          Show human-friendly numbers using base 1024 (default)

      --iec
          Use 1024 as a base (KiB, MiB, GiB, TiB)

      --si
          Use 1000 as a base (kB, MB, GB, TB)

      --kbytes
          Show sizes in KiB, or kB with --si

      --mbytes
          Show sizes in MiB, or MB with --si

      --gbytes
          Show sizes in GiB, or GB with --si

      --tbytes
          Show sizes in TiB, or TB with --si

  -H, --human-si
          Use base 1000 for human-readable sizes

  -T, --tabular
          Show data in tabular format

  -h, --help
          Print help
