cli/tests/snapshots/help__btrfs_inspect_dump_tree.snap
---
source: cli/tests/help.rs
expression: text
---
Dump tree blocks from a btrfs filesystem

Usage: dump-tree [OPTIONS] <PATH>

Arguments:
  <PATH>
          Path to a file or directory on the btrfs filesystem

Options:
  -t, --tree <TREE>
          Only dump blocks from this tree

  -b, --block <BLOCK>
          Only dump blocks at this block number

  -h, --help
          Print help
