cli/tests/snapshots/help__btrfs_inspect_inode_resolve.snap
---
source: cli/tests/help.rs
expression: text
---
Get file system paths for the given inode

Usage: inode-resolve <INODE> <PATH>

Arguments:
  <INODE>
          Inode number

  <PATH>
          Path to a file or directory on the btrfs filesystem

Options:
  -h, --help
          Print help
